<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">01SunShine</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_location">Location</string>
    <string name="action_share">Share</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_settings">Settings</string>



    <!-- Strings related to Settings -->
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">07310</string>

    <string-array name="pref_units_entries">
        <item>@string/pref_units_label_metric</item>
        <item>@string/pref_units_label_imperial</item>
    </string-array>
    <string-array name="pref_units_values">
        <item>@string/pref_units_metric</item>
        <item>@string/pref_units_imperial</item>
    </string-array>
    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_label">Units</string>
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date">
        <xliff:g id="day">%1$s</xliff:g>,
        <xliff:g id="date">%2$s</xliff:g>
    </string>

    <!-- TEMPERATURE FORMAT-->
    <!-- \u00B0 is the unit code character for degree symbol-->
    <string name="format_temperature">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>

    <!-- WIND FORMAT m/s-->
    <string name="format_wind_ms">
        Wind: <xliff:g id="wind">%1$1.0f</xliff:g> m/s <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- WIND FORMAT mph-->
    <string name="format_wind_mph">
        Wind: <xliff:g id="wind">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- PRESSURE FORMAT -->
    <string name="format_pressure">
        Pressure: <xliff:g id="pressure">%1$1.0f</xliff:g> hpa
    </string>

    <!-- HUMIDITY FORMAT -->
    <string name="format_humidity">
        Humidity: <xliff:g id="humidity">%1$1.0f</xliff:g> %%
    </string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.jinyoon.a01sunshine</string>


    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification
    </string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
</resources>
