<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_location_default"
        android:inputType="textCapWords"
        android:key="@string/pref_location_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_location_label" />

    <ListPreference
        android:entries="@array/pref_units_entries"
        android:defaultValue="@string/pref_units_metric"
        android:entryValues="@array/pref_units_values"
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"/>

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />


</PreferenceScreen>
